log
Sat, May 17, 2025  4:58:30 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:58:23: error: unused variable 'j' [-Werror=unused-variable]
                 int i,j;
                       ^
cc1.exe: all warnings being treated as errors
3f0e54c
Sat, May 17, 2025  4:59:28 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
32edeb9
Sat, May 17, 2025  5:15:51 PM: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  5|3
total_score: 35/70
bde293a
